--- a/ckanext/ubdc/public/base/scss/_custom.scss
+++ b/ckanext/ubdc/public/base/scss/_custom.scss
@@ -30,9 +30,10 @@
     .beta-message-close {
         background: none;
         border: none;
-        margin-top: -8px;
+        margin-top: -22px;
         font-weight: 900;
         font-size: 18px;
+        padding-right: 16px;
     }
     a {
         color: #fff;
